# 2semintegral

./: CMakeLists.txt  allthemath.c  allthemath.h  f1.asm  f2.asm  f3.asm  f4.asm  f5.asm  f6.asm  main  main.c  makefile  report_6.tex  run.sh
